--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO-LIST</title>
     <link rel="stylesheet" href="styles.css">
+	<link rel="shortcut icon" type="image/jpg" href="icon.png"/>
 </head>
 <body>
     <div class="ultra">
